Adding findbugs to the reports. Fixed minor potential problems. Clean bill of health from findbugs.